# REW_MAP

./: CHECKLIST.md  Caddyfile  CameraScanScheduler.kt  DEPLOY_CLOUDFLARE_TUNNEL.md  Dockerfile  HANDOFF_NEXT_CHAT.md  HANDOFF_STAGE41_14_INCIDENT_CHAT_QUICK.md  HOW_TO_WORK_WITH_ME.md  README.md  REFACTOR_V3.md  TRACKER_CONTRACT.md  bot.py  celery_worker.py  compat_flask.py  compat_werkzeug_datastructures.py  compat_werkzeug_security.py  compat_werkzeug_utils.py  docker-compose.bot.yml  docker-compose.dev.asgi.yml  docker-compose.dev.yml  docker-compose.prod.full.yml  docker-compose.prod.yml  env_loader.py  mkdocs.yml  pending_history.json  project_manual.md  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_caddy.ps1  run_quicktunnel.ps1  sw.js  worker.py  ws_cli.py  wsgi.py  zones.db
ai_engine/: Dockerfile  main.py  mlops_client.py  requirements.txt
alembic/: env.py
app/: __init__.py  commands.py  config.py  db_compat.py  extensions.py  helpers.py  main.py  models.py  schemas.py  sockets.py  storage.py  tasks_utils.py
deploy/: README_DEPLOY.md  RUNBOOK.md  backup_postgres.sh  entrypoint_web.sh  entrypoint_worker.sh  gunicorn.conf.py  nginx_example.conf  nginx_prod.conf  restore_postgres.sh
docs/: index.md  roadmap_v7.md  stack_gap_checklist.md
frontend/: README_vite.txt  index.html  package.json  vite.config.js
fuzz_targets/: parse_exif_fuzzer.py
k8s/: 01-namespace.yaml  02-redis.yaml  03-fastapi-web.yaml  04-ai-engine.yaml  05-jaeger.yaml  (+6 more)
telemetry_node/: Cargo.toml
telemetry_node/fuzz/: README.md
telemetry_node/src/: main.rs
(+545 files in other folders)
