[package]
name = "telemetry_node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonwebtoken = "9"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace"] }
governor = "0.6"
tower-governor = "0.3"
tokio-uring = "0.4.0"
quinn = "0.10.2"
rustls = { version = "0.21.6", features = ["quic"] }
rcgen = "0.11.1"
